erDiagram
    USERS ||--o{ VEHICLES : "owns"
    USERS ||--o{ REPAIR_ORDERS : "submits"
    USERS ||--o{ FEEDBACK : "gives"
    VEHICLES ||--o{ REPAIR_ORDERS : "is for"
    ADMINS ||--o{ REPAIR_ORDERS : "manages"
    ADMINS ||--o{ FEEDBACK : "responds to"
    REPAIR_ORDERS ||--o{ REPAIR_ORDER_WORKERS : "has"
    REPAIR_ORDERS ||--o{ REPAIR_ORDER_SERVICES : "includes"
    REPAIR_ORDERS ||--o{ REPAIR_MATERIALS : "uses"
    REPAIR_ORDERS ||--o{ FEEDBACK : "receives"
    REPAIR_WORKERS ||--o{ REPAIR_ORDER_WORKERS : "assigned to"
    REPAIR_WORKERS ||--o{ WAGES : "earns"
    SERVICES ||--|{ REPAIR_ORDER_SERVICES : "is"
    MATERIALS ||--|{ REPAIR_MATERIALS : "is"

    USERS {
        int id PK "主键"
        string name "用户姓名"
        string username "用户名"
        string phone "手机号码"
        string email "邮箱地址"
        string password_hash "密码哈希"
        string address "联系地址"
        UserStatus status "用户状态"
        datetime created_at "创建时间"
        datetime updated_at "更新时间"
    }

    VEHICLES {
        int id PK "主键"
        int user_id FK "车主ID"
        string license_plate "车牌号"
        string vin "车架号"
        string model "车型"
        string manufacturer "制造商"
        int year "生产年份"
        string color "颜色"
        int mileage "里程数"
        date purchase_date "购买日期"
        VehicleStatus status "车辆状态"
        datetime created_at "创建时间"
        datetime updated_at "更新时间"
    }

    REPAIR_ORDERS {
        int id PK "主键"
        int user_id FK "用户ID"
        int vehicle_id FK "车辆ID"
        int admin_id FK "管理员ID"
        string order_number "订单编号"
        text description "故障描述"
        OrderStatus status "订单状态"
        OrderPriority priority "优先级"
        datetime create_time "创建时间"
        datetime estimated_completion_time "预计完成时间"
        datetime actual_completion_time "实际完成时间"
        decimal total_labor_cost "总人工费"
        decimal total_material_cost "总材料费"
        decimal total_service_cost "总服务费"
        decimal total_cost "总费用"
        text internal_notes "内部备注"
        string comment "评价"
        string status_history "状态历史"
        boolean is_deleted "是否删除"
        datetime created_at "创建时间"
        datetime updated_at "更新时间"
    }

    ADMINS {
        int id PK "主键"
        string username "用户名"
        string name "姓名"
        string password_hash "密码哈希"
        string email "邮箱"
        string phone "手机号码"
        AdminRole role "管理员角色"
        json permissions "权限配置"
        AdminStatus status "状态"
        datetime last_login "最后登录时间"
        datetime created_at "创建时间"
        datetime updated_at "更新时间"
    }

    REPAIR_WORKERS {
        int id PK "主键"
        string employee_id "员工编号"
        string name "姓名"
        string phone "手机号码"
        string email "邮箱"
        string skill_type "技能类型"
        SkillLevel skill_level "技能等级"
        decimal hourly_rate "时薪"
        WorkerStatus status "状态"
        date hire_date "入职日期"
        text certifications "资质证书"
        string hashed_password "密码哈希"
        datetime created_at "创建时间"
        datetime updated_at "更新时间"
    }

    REPAIR_ORDER_WORKERS {
        int id PK "主键"
        int order_id FK "订单ID"
        int worker_id FK "工人ID"
        decimal work_hours "工作小时数"
        decimal hourly_rate "时薪快照"
        decimal total_payment "总支付金额"
        WorkerAssignmentStatus status "状态"
        datetime start_time "开始时间"
        datetime end_time "结束时间"
        text work_description "工作描述"
        datetime created_at "创建时间"
        datetime updated_at "更新时间"
    }

    SERVICES {
        int id PK "主键"
        string service_code "服务代码"
        string name "服务名称"
        text description "服务描述"
        string category "服务分类"
        decimal standard_price "标准价格"
        int estimated_hours "预计耗时(小时)"
        ServiceStatus status "状态"
        datetime created_at "创建时间"
        datetime updated_at "更新时间"
    }

    REPAIR_ORDER_SERVICES {
        int id PK "主键"
        int order_id FK "订单ID"
        int service_id FK "服务ID"
        decimal price "服务价格"
        int quantity "数量"
        decimal total_cost "总费用"
        ServiceStatus status "状态"
        text notes "备注"
        datetime created_at "创建时间"
        datetime updated_at "更新时间"
    }

    MATERIALS {
        int id PK "主键"
        string material_code "材料编码"
        string name "材料名称"
        text description "材料描述"
        string category "材料分类"
        decimal unit_price "单价"
        string unit "单位"
        int stock_quantity "库存数量"
        int min_stock_level "最低库存警戒线"
        MaterialStatus status "状态"
        date last_purchase_date "最后采购日期"
        datetime created_at "创建时间"
        datetime updated_at "更新时间"
    }

    REPAIR_MATERIALS {
        int id PK "主键"
        int order_id FK "订单ID"
        int material_id FK "材料ID"
        int quantity_used "使用数量"
        decimal unit_price "单价快照"
        decimal total_cost "总费用"
        text notes "使用备注"
        datetime used_at "使用时间"
        datetime created_at "创建时间"
        datetime updated_at "更新时间"
    }

    FEEDBACK {
        int id PK "主键"
        int user_id FK "用户ID"
        int order_id FK "相关订单ID"
        string title "反馈标题"
        int rating "评分(1-5)"
        text comment "反馈内容"
        FeedbackType feedback_type "反馈类型"
        string contact_info "联系方式"
        FeedbackStatus status "状态"
        text response "管理员回复"
        int response_admin_id FK "回复管理员ID"
        datetime response_time "回复时间"
        datetime created_at "创建时间"
        datetime updated_at "更新时间"
    }

    WAGES {
        int id PK "主键"
        int worker_id FK "工人ID"
        string period "工资周期(YYYY-MM)"
        decimal base_salary "基本工资"
        int work_days "工作天数"
        decimal overtime_hours "加班工时"
        decimal overtime_pay "加班费"
        decimal commission "提成"
        decimal bonus "奖金"
        decimal deductions "扣款"
        decimal total_amount "总支付金额"
        WageStatus status "状态"
        date pay_date "支付日期"
        string notes "备注"
        datetime created_at "创建时间"
        datetime updated_at "更新时间"
    }
